src/test/UnterminatedString/UnterminatedString.expected
error: UnterminatedString.panda:18:35: unterminated string literal
1 error
