src/test/UnterminatedString/UnterminatedString.panda
class Guess {
    @class
    method main() {
        var guesses := 0
        var min := 1
        var max := 1000
        var seed := 1234
        Console.writeLine("I'm thinking of a number between \{min} and " + 
                "\{max}. Try to guess it!")
        var target := Random(seed).int(max - min) + min
        loop {
            Console.write("Guess: ")
            var guessString := Console.readLine()
            if guessString = null
                break
            var guess := guessString.convert()->Int?
            if guess = null {
                Console.writeLine("I don't understand '\{guessString}'.  + 
                        "Please enter a number between \{min} and \{max}.")
                continue
            }
            guesses += 1
            if guess > target
                Console.writeLine("Lower!")
            else if guess < target
                Console.writeLine("Higher!")
            else {
                if guesses = 1
                    Console.writeLine("You got it in 1 guess!")
                else
                    Console.writeLine("You got it in \{guesses} guesses!")
                break
            }
        }
    }
}